Fix scrolling issue
This container covers scrollbars in the content. It also prevents the
user from clicking on links. Other interactions still work.

The container does not need to have a size or position. Its only use is
to group the DOM nodes inside it.

--- a/style/index.css
+++ b/style/index.css
@@ -125,11 +125,6 @@ h2 {
 	display:             none;
 }
 
-#div_about {
-	position:            absolute;
-	width:               calc(100% - 30px);
-	height:              calc(100% - 30px);
-}
 #div_about .slider.active {
 	position:            absolute;
 	display:             flex;
